--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -22,7 +22,7 @@
             </div>
             <div class="mt-2">
               <%= link_to 'Edit', edit_flat_path(flat), class: 'btn btn-warning' %>
-              <%= link_to 'Delete', flat_path(flat), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+              <%= link_to 'Delete', flat_path(flat), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
             </div>
           </div>
         </div>
