--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -5,7 +5,7 @@
       <p class="lead"><%= @flat.address %></p>
       <div class="d-flex">
         <%= link_to 'Edit', edit_flat_path(@flat), class: 'btn btn-warning me-2' %>
-        <%= link_to 'Delete', flat_path(@flat), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+        <%= link_to 'Delete', flat_path(@flat), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
       </div>
     </div>
   </div>
