--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="text-center mb-5">Available Flats</h1>
 
-<div class="container mb-4">
+<div class="container mb-4 d-flex justify-content-between">
   <%= form_with url: flats_path, method: :get, local: true do %>
     <div class="input-group">
       <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search for a flat..." %>
@@ -9,6 +9,8 @@
       </div>
     </div>
   <% end %>
+
+  <%= link_to 'Add a New Flat', new_flat_path, class: 'btn btn-success' %>
 </div>
 
 <div class="container">
