--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -6,7 +6,8 @@
       <% if @flat.picture_url.present? %>
         <img src="<%= @flat.picture_url %>" class="img-fluid mb-4" alt="<%= @flat.name %>">
       <% end %>
-      <div class="d-flex">
+      <div class="d-flex mb-4">
+        <%= link_to 'Back to Flats', flats_path, class: 'btn btn-secondary me-2' %>
         <%= link_to 'Edit', edit_flat_path(@flat), class: 'btn btn-warning me-2' %>
         <%= link_to 'Delete', flat_path(@flat), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
       </div>
